<resources>
    <string name="app_name">MarvelBook</string>
    <string name="coleccion">Colección</string>
    <string name="mazo">Mazo</string>
    <string name="tienda">Tienda</string>


    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
...
    <string name="login_failed">"Login failed"</string>
    <string name="textoBienvenidaRegistro">¡ADÉNTRATE EN EL UNIVERSO MARVEL!</string>
    <string name="textoBienvenidaRegistro2">¿A QUÉ ESPERAS?</string>
    <string name="IntroducirPassword">Introduce tu contraseña</string>
    <string name="IntroducirPasswordRepetida">Vuelve a introducir la contraseña</string>
    <string name="IntroducirEmail">Introduce tu email</string>
    <string name="botonRegistro">¡REGISTRATE!</string>
    <string name="IntroducirNombre">Introduce tu nombre de usuario</string>
    <string name="DescripcionLogoRegistroMarvel">Logo de registro marvel</string>
    <string name="tituloLogin">¡BIENVENIDO DE NUEVO!</string>
    <string name="descripcionFotoLogin">foto de Marvel</string>
    <string name="Recuerdame">Recordar datos de inicio de sesión</string>
    <string name="CrearCuentaLogin">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="botonLogin">Iniciar sesión</string>


    <string name="Descripcion_Sobre2">Abre y consigue...\n¡3 SUPERHÉROES!</string>
    <string name="Descripción_Sobre1">Abre y consigue...\n¡1 SUPERHÉROES!</string>
    <string name="Moneda_Sobre1">10</string>
    <string name="Moneda_Sobre2">20</string>
    <string name="Moneda_Usuario">100</string>
    <string name="Moneda_Usuario_Valor">100</string>
    <string name="Moneda_Sobre2_Imagen">20</string>
    <string name="Moneda_Sobre1_Imagen">10</string>
    <string name="Sobre1_Imagen">10</string>
    <string name="Sobre2_Imagen">2</string>
    <string name="Texto_Sobres">SOBRES DISPONIBLES</string>
    <string name="Nombre_Personaje_Sobre">Spider-man</string>
    <string name="valor_ataque_sobre">19</string>
    <string name="valor_defensa_sobre">56</string>
    <string name="valor_vel_sobre">36</string>
    <string name="imagen_ataque_sobre">2</string>
    <string name="imagen_defensa_sobre">1</string>
    <string name="imagen_velocidad_sobre">3</string>
    <string name="imagen_personaje">0</string>
    <string name="Titulo_SobreAbierto">TE HA TOCADO...</string>
    <string name="boton_guardar_mazo">¡CONTINUAR...!</string>
    <string name="favSwitch">FAV</string>
    <string name="tumazo">TU MAZO</string>
    <string name="logofav">logofav</string>
    <string name="imagen_UsuarioM">imagen</string>
    <string name="nombre_UsuarioM">Nombre_Usuario</string>
    <string name="Modificar_UsuarioM">MODIFICAR USUARIO</string>
...
    <string name="apariciones">Apariciones</string>
    <string name="ratingNombre">Rating:</string>
    <string name="ratingValue">80</string>
    <string name="descFotoPersonaje">Foto del personaje</string>
    <string name="nombrePersonaje">Spiderman</string>
    <string name="botonBatalla">¡Batalla!</string>
    <string name="botonVender">¡Vender personaje!</string>
    <string name="player1">player1</string>
    <string name="vs">versus</string>
    <string name="player2">player2</string>
    <string name="ataque">ataque</string>
    <string name="defensa">defensa</string>
    <string name="velocidad">velocidad</string>
...
