<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tienda.TiendaFragment">

    <ProgressBar
        android:id="@+id/spinner"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coinUsuario"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/Moneda_Usuario"
        android:src="@drawable/monedamarvel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/coinAmmountUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Moneda_Usuario_Valor"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/coinUsuario"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coinSobre2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Moneda_Sobre2_Imagen"
        android:src="@drawable/monedamarvel"
        app:layout_constraintStart_toEndOf="@+id/coinAmmount2"
        app:layout_constraintTop_toBottomOf="@+id/SobreEspecial"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/coinAmmount1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Moneda_Sobre1"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/SobreBasico"
        app:layout_constraintTop_toBottomOf="@+id/SobreBasico" />

    <TextView
        android:id="@+id/coinAmmount2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/Moneda_Sobre2"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/SobreEspecial"
        app:layout_constraintTop_toBottomOf="@+id/SobreEspecial" />

    <TextView
        android:id="@+id/tiendaTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/alata"
        android:text="@string/Texto_Sobres"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/coinSobre1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/Moneda_Sobre1_Imagen"
        android:src="@drawable/monedamarvel"
        app:layout_constraintStart_toEndOf="@+id/coinAmmount1"
        app:layout_constraintTop_toBottomOf="@+id/SobreBasico"
        tools:ignore="ImageContrastCheck" />

    <ImageView
        android:id="@+id/SobreBasico"
        android:layout_width="166dp"
        android:layout_height="305dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/Sobre1_Imagen"
        android:src="@drawable/sobremarvellisto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <ImageView
        android:id="@+id/SobreEspecial"
        android:layout_width="167dp"
        android:layout_height="305dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/Sobre2_Imagen"
        android:src="@drawable/sobremarvellisto2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SobreBasico"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.467" />

    <TextView
        android:id="@+id/descripcionSobre1"
        android:layout_width="165dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/Descripción_Sobre1"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinAmmount1"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/descripcionSobre2"
        android:layout_width="165dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/Descripcion_Sobre2"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coinAmmount2"
        tools:ignore="TextSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>