...
    <item
        android:id="@+id/navigation_coleccion"
        android:icon="@drawable/ic_coleccion"
        android:title="@string/coleccion"/>

    <item
        android:id="@+id/navigation_mazo"
        android:icon="@drawable/ic_mazo"
        android:title="@string/mazo" />

    <item
        android:id="@+id/navigation_tienda"
        android:icon="@drawable/ic_tienda"
        android:title="@string/tienda" />

</menu>
